--- a/RaveEngine/RaveEngine/RaveEngine.vcxproj
+++ b/RaveEngine/RaveEngine/RaveEngine.vcxproj
@@ -124,6 +124,7 @@
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(ProjectDir);C:\VulkanSDK\1.2.162.0\Include;C:\Users\victo\source\repos\Libraries\glm-0.9.9.8;C:\Users\victo\source\repos\Libraries\glfw-3.3.2.bin.WIN64\include</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <DisableSpecificWarnings>4996</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -142,6 +143,7 @@
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(ProjectDir);C:\VulkanSDK\1.2.162.0\Include;C:\Users\victo\source\repos\Libraries\glm-0.9.9.8;C:\Users\victo\source\repos\Libraries\glfw-3.3.2.bin.WIN64\include</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <DisableSpecificWarnings>4996</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -197,6 +199,7 @@
     <ClInclude Include="Engine\Include\Platform.h" />
     <ClInclude Include="Engine\Include\RaveEngine.h" />
     <ClInclude Include="Engine\Include\Window.h" />
+    <ClInclude Include="Engine\Utilities\Include\Color.h" />
     <ClInclude Include="Engine\Utilities\Include\Exception.h" />
     <ClInclude Include="Engine\Utilities\Include\Flag.h" />
     <ClInclude Include="Engine\Utilities\Include\PerformanceProfiler.h" />
