image reading about done

--- a/RaveEngine/RaveEngine/RaveEngine.vcxproj
+++ b/RaveEngine/RaveEngine/RaveEngine.vcxproj
@@ -157,10 +157,58 @@
   <ItemGroup>
     <ClCompile Include="Application\Source\Main.cpp" />
     <ClCompile Include="Engine\Source\GLFWManager.cpp" />
+    <ClCompile Include="Engine\Source\ImageLoader.cpp" />
     <ClCompile Include="Engine\Source\Window.cpp" />
     <ClCompile Include="Engine\Utilities\Source\Exception.cpp" />
     <ClCompile Include="Engine\Utilities\Source\PerformanceProfiler.cpp" />
     <ClCompile Include="Engine\Utilities\Source\Timer.cpp" />
+    <ClCompile Include="Libraries\cgif\gifdec.cpp" />
+    <ClCompile Include="Libraries\libjpg\jaricom.c" />
+    <ClCompile Include="Libraries\libjpg\jcapimin.c" />
+    <ClCompile Include="Libraries\libjpg\jcapistd.c" />
+    <ClCompile Include="Libraries\libjpg\jcarith.c" />
+    <ClCompile Include="Libraries\libjpg\jccoefct.c" />
+    <ClCompile Include="Libraries\libjpg\jccolor.c" />
+    <ClCompile Include="Libraries\libjpg\jcdctmgr.c" />
+    <ClCompile Include="Libraries\libjpg\jchuff.c" />
+    <ClCompile Include="Libraries\libjpg\jcinit.c" />
+    <ClCompile Include="Libraries\libjpg\jcmainct.c" />
+    <ClCompile Include="Libraries\libjpg\jcmarker.c" />
+    <ClCompile Include="Libraries\libjpg\jcmaster.c" />
+    <ClCompile Include="Libraries\libjpg\jcomapi.c" />
+    <ClCompile Include="Libraries\libjpg\jcparam.c" />
+    <ClCompile Include="Libraries\libjpg\jcprepct.c" />
+    <ClCompile Include="Libraries\libjpg\jcsample.c" />
+    <ClCompile Include="Libraries\libjpg\jctrans.c" />
+    <ClCompile Include="Libraries\libjpg\jdapimin.c" />
+    <ClCompile Include="Libraries\libjpg\jdapistd.c" />
+    <ClCompile Include="Libraries\libjpg\jdarith.c" />
+    <ClCompile Include="Libraries\libjpg\jdatadst.c" />
+    <ClCompile Include="Libraries\libjpg\jdatasrc.c" />
+    <ClCompile Include="Libraries\libjpg\jdcoefct.c" />
+    <ClCompile Include="Libraries\libjpg\jdcolor.c" />
+    <ClCompile Include="Libraries\libjpg\jddctmgr.c" />
+    <ClCompile Include="Libraries\libjpg\jdhuff.c" />
+    <ClCompile Include="Libraries\libjpg\jdinput.c" />
+    <ClCompile Include="Libraries\libjpg\jdmainct.c" />
+    <ClCompile Include="Libraries\libjpg\jdmarker.c" />
+    <ClCompile Include="Libraries\libjpg\jdmaster.c" />
+    <ClCompile Include="Libraries\libjpg\jdmerge.c" />
+    <ClCompile Include="Libraries\libjpg\jdpostct.c" />
+    <ClCompile Include="Libraries\libjpg\jdsample.c" />
+    <ClCompile Include="Libraries\libjpg\jdtrans.c" />
+    <ClCompile Include="Libraries\libjpg\jerror.c" />
+    <ClCompile Include="Libraries\libjpg\jfdctflt.c" />
+    <ClCompile Include="Libraries\libjpg\jfdctfst.c" />
+    <ClCompile Include="Libraries\libjpg\jfdctint.c" />
+    <ClCompile Include="Libraries\libjpg\jidctflt.c" />
+    <ClCompile Include="Libraries\libjpg\jidctfst.c" />
+    <ClCompile Include="Libraries\libjpg\jidctint.c" />
+    <ClCompile Include="Libraries\libjpg\jmemmgr.c" />
+    <ClCompile Include="Libraries\libjpg\jmemnobs.c" />
+    <ClCompile Include="Libraries\libjpg\jquant1.c" />
+    <ClCompile Include="Libraries\libjpg\jquant2.c" />
+    <ClCompile Include="Libraries\libjpg\jutils.c" />
     <ClCompile Include="Libraries\libpng\png.c" />
     <ClCompile Include="Libraries\libpng\pngerror.c" />
     <ClCompile Include="Libraries\libpng\pngget.c" />
@@ -208,6 +256,16 @@
     <ClInclude Include="Engine\Utilities\Include\SystemInfo.h" />
     <ClInclude Include="Engine\Utilities\Include\Timer.h" />
     <ClInclude Include="Engine\Utilities\Include\Vector.h" />
+    <ClInclude Include="Libraries\cgif\gifdec.h" />
+    <ClInclude Include="Libraries\libjpg\jconfig.h" />
+    <ClInclude Include="Libraries\libjpg\jdct.h" />
+    <ClInclude Include="Libraries\libjpg\jerror.h" />
+    <ClInclude Include="Libraries\libjpg\jinclude.h" />
+    <ClInclude Include="Libraries\libjpg\jmemsys.h" />
+    <ClInclude Include="Libraries\libjpg\jmorecfg.h" />
+    <ClInclude Include="Libraries\libjpg\jpegint.h" />
+    <ClInclude Include="Libraries\libjpg\jpeglib.h" />
+    <ClInclude Include="Libraries\libjpg\jversion.h" />
     <ClInclude Include="Libraries\libpng\png.h" />
     <ClInclude Include="Libraries\libpng\pngconf.h" />
     <ClInclude Include="Libraries\libpng\pngdebug.h" />
