--- a/RaveEngine/RaveEngine/RaveEngine.vcxproj
+++ b/RaveEngine/RaveEngine/RaveEngine.vcxproj
@@ -131,6 +131,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>C:\VulkanSDK\1.2.162.0\Lib;C:\Users\victo\source\repos\Libraries\glfw-3.3.2.bin.WIN64\lib-vc2019</AdditionalLibraryDirectories>
       <AdditionalDependencies>vulkan-1.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -152,10 +153,13 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>C:\VulkanSDK\1.2.162.0\Lib;C:\Users\victo\source\repos\Libraries\glfw-3.3.2.bin.WIN64\lib-vc2019</AdditionalLibraryDirectories>
       <AdditionalDependencies>vulkan-1.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Application\Source\Main.cpp" />
+    <ClCompile Include="Engine\Source\Keyboard.cpp" />
+    <ClCompile Include="Engine\Source\Mouse.cpp" />
     <ClCompile Include="Engine\Source\GLFWManager.cpp" />
     <ClCompile Include="Engine\Source\ImageLoader.cpp" />
     <ClCompile Include="Engine\Source\Window.cpp" />
@@ -244,6 +248,8 @@
     <ClInclude Include="Engine\Include\CommonIncludes.h" />
     <ClInclude Include="Engine\Include\GLFWManager.h" />
     <ClInclude Include="Engine\Include\ImageLoader.h" />
+    <ClInclude Include="Engine\Include\Keyboard.h" />
+    <ClInclude Include="Engine\Include\Mouse.h" />
     <ClInclude Include="Engine\Include\Platform.h" />
     <ClInclude Include="Engine\Include\RaveEngine.h" />
     <ClInclude Include="Engine\Include\Window.h" />
