--- a/RaveEngine/RaveEngine/RaveEngine.vcxproj.filters
+++ b/RaveEngine/RaveEngine/RaveEngine.vcxproj.filters
@@ -273,6 +273,9 @@
     <ClCompile Include="Engine\Source\Keyboard.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Graphics\Source\Graphics.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Utilities\Include\Exception.h">
@@ -411,6 +414,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Engine\Include\Keyboard.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Graphics\Include\Graphics.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
