--- a/RaveEngine/RaveEngine/RaveEngine.vcxproj
+++ b/RaveEngine/RaveEngine/RaveEngine.vcxproj
@@ -124,7 +124,7 @@
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(ProjectDir);C:\VulkanSDK\1.2.162.0\Include;C:\Users\victo\source\repos\Libraries\glm-0.9.9.8;C:\Users\victo\source\repos\Libraries\glfw-3.3.2.bin.WIN64\include</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <DisableSpecificWarnings>4996</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4996;26812</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -144,7 +144,7 @@
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(ProjectDir);C:\VulkanSDK\1.2.162.0\Include;C:\Users\victo\source\repos\Libraries\glm-0.9.9.8;C:\Users\victo\source\repos\Libraries\glfw-3.3.2.bin.WIN64\include</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <DisableSpecificWarnings>4996</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4996;26812</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -158,6 +158,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Application\Source\Main.cpp" />
+    <ClCompile Include="Engine\Graphics\Source\Graphics.cpp" />
     <ClCompile Include="Engine\Source\Keyboard.cpp" />
     <ClCompile Include="Engine\Source\Mouse.cpp" />
     <ClCompile Include="Engine\Source\GLFWManager.cpp" />
@@ -245,6 +246,7 @@
     <ClCompile Include="Libraries\zlib\zutil.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Engine\Graphics\Include\Graphics.h" />
     <ClInclude Include="Engine\Include\CommonIncludes.h" />
     <ClInclude Include="Engine\Include\GLFWManager.h" />
     <ClInclude Include="Engine\Include\ImageLoader.h" />
